# FaceEngineExamples

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RunAllExamples.sh  RunExamples.sh  portrait1.ppm  portrait2.ppm
cmake/: FindFaceEngineSDK.cmake  FindLivenessEngineSDK.cmake
descriptors/: Cameron_Diaz.xpk  Cameron_Diaz_2.xpk  Jason_Statham.xpk  Jason_Statham_2.xpk  Jennifer_Aniston.xpk  Jennifer_Aniston_2.xpk
example1/: CMakeLists.txt  README.md  main.cc  main.cpp
example2/: CMakeLists.txt  README  README.md  main.cc  main.cpp
example3/: CMakeLists.txt  README.md  main.cc  main.cpp
example4/: CMakeLists.txt  README.md  main.cpp
example5/: CMakeLists.txt  README.md  main.cpp
example6/: CMakeLists.txt  README.md  io_util.h  main.cpp
example7/: CMakeLists.txt  README.md  io_util.h  main.cpp
example8/: CMakeLists.txt  README.md  main.cpp
example9/: CMakeLists.txt  README.md  main.cpp
images/: Cameron_Diaz.ppm  Cameron_Diaz_2.ppm  Jason_Statham.ppm  Jason_Statham_2.ppm  Jennifer_Aniston.ppm  Jennifer_Aniston_2.ppm  portrait.ppm
images_lists/: list.txt
